k8s/03-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connecthub-backend
  namespace: connecthub
spec:
  replicas: 2 # multiple replicas for basic high availability
  selector:
    matchLabels:
      app: connecthub-backend
  template:
    metadata:
      labels:
        app: connecthub-backend
    spec:
      containers:
        - name: backend
          image: dotinpiyush/connecthub-backend:latest # build & push from ./backend/Dockerfile
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: connecthub-backend-service
  namespace: connecthub
spec:
  selector:
    app: connecthub-backend
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
